# research-inequality

./: .gitignore  main.py  pyproject.toml
notebooks/: iq_dummy.ipynb  stata.ipynb  wb.ipynb  wb.py  wb_cleaning.ipynb
reports/report-01/: reference.bib  report-01.tex
reports/report-02/: reference.bib  report-02.tex
reports/report-03/: reference.bib  report-03.tex
src/: models.py
src/data/: data_process.py  data_pull.py
